fix footer bug on safari

--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    height: 100%;
+    min-height: 100%;
     padding-right: 4px;
     overflow-x: hidden;
     display: flex;
